; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_subr_prf.c_vaddlog.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_subr_prf.c_vaddlog.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.putchar_args = type { i32*, i32 }

@TOLOGLOCKED = common dso_local global i32 0, align 4
@putchar_asl = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vaddlog(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.putchar_args, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = getelementptr inbounds %struct.putchar_args, %struct.putchar_args* %5, i32 0, i32 0
  store i32* null, i32** %6, align 8
  %7 = getelementptr inbounds %struct.putchar_args, %struct.putchar_args* %5, i32 0, i32 1
  %8 = load i32, i32* @TOLOGLOCKED, align 4
  store i32 %8, i32* %7, align 8
  %9 = call i32 (...) @bsd_log_lock()
  %10 = load i8*, i8** %3, align 8
  %11 = load i32, i32* %4, align 4
  %12 = load i32, i32* @putchar_asl, align 4
  %13 = load i32, i32* @TRUE, align 4
  %14 = call i32 @__doprnt(i8* %10, i32 %11, i32 %12, %struct.putchar_args* %5, i32 10, i32 %13)
  %15 = call i32 (...) @bsd_log_unlock()
  %16 = call i32 @logwakeup(i32* null)
  ret i32 0
}

declare dso_local i32 @bsd_log_lock(...) #1

declare dso_local i32 @__doprnt(i8*, i32, i32, %struct.putchar_args*, i32, i32) #1

declare dso_local i32 @bsd_log_unlock(...) #1

declare dso_local i32 @logwakeup(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
